syntax = "proto3";

option java_multiple_files = true;
package proto;

message ConnectionsProto{
  string uuid = 1;
}

message ConnectionsResponseProto{
  repeated string connections = 1;
  string status = 2;
}