syntax = "proto3";

option java_multiple_files = true;
package proto;
import "connections.proto";

service ConnectionsGrpcService{
  rpc getConnections (ConnectionsProto) returns (ConnectionsResponseProto);
}